RESOLVED FIXED48436
REGRESSION (r70335): Incorrect article layout in Safari Reader
https://bugs.webkit.org/show_bug.cgi?id=48436
Summary REGRESSION (r70335): Incorrect article layout in Safari Reader
mitz
Reported 2010-10-27 10:20:51 PDT
REGRESSION (r70335): Incorrect article layout in Safari Reader
Attachments
Disable the cross-origin check in getMatchedCSSRules in versions of Safari lined against versions of WebKit that didn’t have the check (5.48 KB, patch)
2010-10-27 10:26 PDT, mitz
darin: review+
mitz
Comment 1 2010-10-27 10:26:02 PDT
Created attachment 72054 [details] Disable the cross-origin check in getMatchedCSSRules in versions of Safari lined against versions of WebKit that didn’t have the check
Darin Adler
Comment 2 2010-10-27 10:58:49 PDT
Comment on attachment 72054 [details] Disable the cross-origin check in getMatchedCSSRules in versions of Safari lined against versions of WebKit that didn’t have the check View in context: https://bugs.webkit.org/attachment.cgi?id=72054&action=review > WebCore/ChangeLog:9 > + (WebCore::DOMWindow::getMatchedCSSRules): Return rules from all origins if the corss-origin Typo: corss > WebCore/page/DOMWindow.cpp:1257 > Document* doc = m_frame->document(); This local variable doesn’t seem to keep its weight. > WebCore/page/Settings.h:336 > + bool disableGetMatchedCSSRulesCrossOriginCheck() const { return m_disableGetMatchedCSSRulesCrossOriginCheck; } For functions that return booleans, I prefer that we not use verb phrases such as “disable”. > WebCore/page/Settings.h:425 > + bool m_disableGetMatchedCSSRulesCrossOriginCheck : 1; Same thing for data members.
Darin Adler
Comment 3 2010-10-27 11:00:55 PDT
Comment on attachment 72054 [details] Disable the cross-origin check in getMatchedCSSRules in versions of Safari lined against versions of WebKit that didn’t have the check View in context: https://bugs.webkit.org/attachment.cgi?id=72054&action=review >> WebCore/page/DOMWindow.cpp:1257 >> Document* doc = m_frame->document(); > > This local variable doesn’t seem to keep its weight. Sorry, I meant to say “doesn’t improve readability or clarity and is only used once”.
mitz
Comment 4 2010-10-27 14:39:19 PDT
Alexey Proskuryakov
Comment 5 2010-11-10 10:59:49 PST
Marking as resolved per the above.
David Kilzer (:ddkilzer)
Comment 6 2010-12-14 17:57:21 PST
Note You need to log in before you can comment on or make changes to this bug.