WebCore/page/Settings.h
@@ -332,6 +332,9 @@ namespace WebCore {
         void setHyperlinkAuditingEnabled(bool flag) { m_hyperlinkAuditingEnabled = flag; }
         bool hyperlinkAuditingEnabled() const { return m_hyperlinkAuditingEnabled; }
 
+        void setCrossOriginCheckInGetMatchedCSSRulesDisabled(bool flag) { m_crossOriginCheckInGetMatchedCSSRulesDisabled = flag; }
+        bool crossOriginCheckInGetMatchedCSSRulesDisabled() const { return m_crossOriginCheckInGetMatchedCSSRulesDisabled; }
+
     private:
         Page* m_page;
 
@@ -419,6 +422,7 @@ namespace WebCore {
         bool m_interactiveFormValidation: 1;
         bool m_usePreHTML5ParserQuirks: 1;
         bool m_hyperlinkAuditingEnabled : 1;
+        bool m_crossOriginCheckInGetMatchedCSSRulesDisabled : 1;
 
 #if USE(SAFARI_THEME)
         static bool gShouldPaintNativeControls;
